--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -21,10 +21,10 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_below="@+id/begin_view"
-        android:src="@drawable/logo_main"
-        android:contentDescription="@string/kitty_quotes"/>
+        android:contentDescription="@string/kitty_quotes"
+        android:src="@drawable/kitty_main_title" />
 
     <EditText
         android:id="@+id/edit_user"
